--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://ibragimov-blog-mern.herokuapp.com
+# REACT_APP_API_URL=https://ibragimov-blog-mern.herokuapp.com
+# REACT_APP_API_URL=https://localhost:5000
